force-app/main/default/objects/Exception_log__c/Exception_log__c.object-meta.xml
<CustomObject>
    <description>Stores any system exception</description>
    <label>Exception log</label>
    <nameField>
        <label>Exception log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>