force-app/main/default/objects/Exception_log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Exception error message</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>