force-app/main/default/objects/Exception_log__c/fields/Exception_processed_date__c.field-meta.xml
<CustomField>
    <fullName>Exception_processed_date__c</fullName>
    <label>Exception processed date</label>
    <type>DateTime</type>
</CustomField>