force-app/main/default/objects/Exception_log__c/fields/Exceptional_Area__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Area__c</fullName>
    <label>Exceptional Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>